Add grpc-pg-bench project (code, scripts, results)
gRPC + PostgreSQL benchmark workspace: Go (pgx), Rust (tokio),
Spring VT/RT, Kotlin Vert.x stacks, load generator, scripts, and
captured result sets.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>