@@ -1,318 +1,193 @@
-# gRPC + Async Postgres Benchmark: Go (pgx) vs Kotlin/Vert.x
+# gRPC + Postgres Benchmark — Go vs Rust vs Spring Boot (virtual threads)
 
-Two functionally identical gRPC services that unmarshal a command, do a tiny
-CPU touch (FNV-1a checksum), and insert one row into Postgres via an async
-driver. The point is to decide a stack for the next-gen workflow engine by
-measuring throughput and tail latency on a **2-core / 4 GB** box.
+Three functionally identical gRPC services that unmarshal a command, do a tiny
+CPU touch (FNV-1a checksum), and `INSERT` it into Postgres. The goal is to pick a
+stack for a **next-gen distributed workflow engine**, judged on **sustained
+throughput and latency** on a **2-core** box — the shape of a small cloud node
+(memory is cheap on AWS; compute is the cost that matters).
 
-- **go-pgx** — Go + `google.golang.org/grpc` + `jackc/pgx` (pgxpool).
-  Production-shaped: graceful shutdown on SIGINT/SIGTERM, gRPC keepalive
-  (server enforcement), `grpc.health.v1` registered, slog structured logs,
-  pgxpool tuned with `MaxConnLifetime` / `MaxConnIdleTime` / `HealthCheckPeriod`.
-- **kotlin-vertx** — Kotlin coroutines + Vert.x 5 gRPC server + `vertx-pg-client`.
-  Built around the kotlin-vertx-talk pattern: a `CoroutineVerticle` per event
-  loop (deployed with `instances = VERTX_EVENT_LOOPS`), a shared pool built
-  once on the root Vertx, gRPC handlers bridged to coroutines via
-  `vertxFuture(scope) { … }` so the suspend block runs on the same event
-  loop the request arrived on — `coAwait` yields the loop while waiting on
-  the network, never blocks it.
+The benchmark here is a **30-minute sustained soak** (one stack at a time, on a
+fresh boot). That's the number that reflects how an always-on engine actually
+behaves under continuous load over time.
 
-A single Go load generator drives both servers, so you measure the *servers*,
-not two different clients.
+> A broader 8-stack exploration is archived in
+> [`README-archive-8stacks.md`](README-archive-8stacks.md). This document is the
+> focused **3-stack soak**.
 
-## Layout
+## The three stacks
 
-```
-proto/command.proto         # shared contract (single source of truth)
-sql/schema.sql              # shared table + index
-go-pgx/                     # Go server (stubs generated into gen/benchv1)
-kotlin-vertx/               # Maven project, Kotlin/Vert.x server
-loadgen/                    # shared Go load generator
-scripts/                    # build + run + orchestrate
-results/                    # JSON + summary.csv per run (created at runtime)
-```
+- **go-pgx** — Go + `google.golang.org/grpc` + `jackc/pgx` (pgxpool). The native
+  baseline: goroutines, graceful shutdown, keepalive, tuned pool.
+- **rust-tokio** — Rust + `tonic` + `tokio-postgres` + `deadpool`. Async/native;
+  tonic's HTTP/2 transport tuned like go (1 MiB windows, `tcp_nodelay`, keepalive).
+- **spring-vt** — Spring Boot 4.1 gRPC + **virtual threads** + **Spring
+  `JdbcClient`** over HikariCP. Blocking code on Loom (no reactive). Config: epoll
+  transport, a single Netty I/O thread, ZGC + 2 GB heap, pool 32. (How that config
+  was arrived at — profiling + A/Bs — is in [`spring-vt/PROFILING.md`](spring-vt/PROFILING.md).)
 
-## Prerequisites
+A single Go load generator drives all three, so you measure the *servers*.
 
-- PostgreSQL 14+ running and reachable (local is best for this test).
-- Go 1.23+ and `protoc` (for the Go server + loadgen + Go stubs).
-- **JDK 25** and Maven 3.9+ (for the Kotlin server). Kotlin 2.2.x's tooling
-  parses the Java 25 version string, so the build won't run on older JDKs.
-  Maven downloads `protoc` and the Vert.x gRPC plugin itself — no system
-  protoc needed for the Kotlin side.
-- `psql`, `python3` (summary parsing), and ideally `taskset` (Linux) for CPU
-  pinning. On macOS pinning is skipped automatically.
+## Test hardware
+
+| | |
+|---|---|
+| Box | AMD Ryzen 5 7535HS, 13 GiB RAM, Ubuntu Linux |
+| Server | pinned to **2 cores** (`taskset -c 2,3`) |
+| Loadgen | pinned to cores 4,5 (never steals server CPU) |
+| Postgres | local, v16.14 (gets the remaining cores) |
+| Runtimes | Go 1.23+ (GOMAXPROCS=2), Rust (2 worker threads), JDK 25 (Corretto) |
+| Pool | **32** DB connections, identical for all three |
+| Payload | 256 B · client connections 4 (HTTP/2, multiplexed) |
 
 ## Quick start
 
 ```bash
-# 1. One-time DB setup (creates role 'bench', db 'bench', applies schema)
-./scripts/setup_db.sh
+./scripts/setup_db.sh           # role + db + schema (one time)
+./scripts/build_go.sh           # bin/go-server + bin/loadgen (needs protoc)
+./scripts/build_rust.sh         # bin/rust-server (needs cargo + protoc)
+./scripts/build_spring_vt.sh    # bin/spring-vt-bench.jar (needs JDK 25)
 
-# 2. Build everything
-./scripts/build_go.sh
-./scripts/build_kotlin.sh
-
-# 3. Run the full sweep for both stacks
-./scripts/run_benchmark.sh
+# The benchmark: 30-min sustained soak, one stack at a time, c=64,
+# with cleanup + cooldown between stacks:
+bash scripts/soak_3stacks.sh
 ```
 
-Results print as a table at the end and are saved under
-`results/<timestamp>/` (per-run JSON + `summary.csv` + `environment.txt`).
+---
 
-### Running one stack / one level manually
+## How we benchmark — the soak (in detail)
 
-```bash
-# terminal 1
-./scripts/run_go_server.sh
-# terminal 2
-./bin/loadgen -addr 127.0.0.1:50051 -c 64 -d 30s -label go-pgx
+A **soak test** applies **sustained, continuous load at a fixed concurrency for a
+long, fixed duration**, to measure *steady-state* behaviour — how the stack holds
+up over time, not its cold-start peak. Specifics:
+
+### Concurrency model — closed-loop (this is key to reading the numbers)
+
+We hold **c = 64 concurrent in-flight requests**. The load generator runs 64
+"workers"; each worker sends one `Execute` RPC, **waits for the response, then
+immediately sends the next** — so there are always exactly 64 requests in flight.
+
+> We do **not** inject a fixed requests/second rate. The **throughput (rps) is the
+> *result*** — it's however many requests the server can complete per second while
+> 64 are always pending. So "how many requests per second" = the measured rps in
+> the results table below (e.g. spring-vt sustained ≈ **11,973 req/s**).
+
+### Duration & volume
+
+- **30 minutes** of continuous measurement **per stack**,
+- preceded by a **30-second warmup** that is discarded (lets the JIT, the
+  connection pool, and the Postgres page cache reach steady state before we count),
+- ⇒ **≈ 18–21 million requests measured per stack** (30 min × ~10–12k req/s).
+
+### Workload
+
+- **`execute`** — one autocommit `INSERT` into the `commands` table per request,
+  plus the FNV-1a checksum CPU touch. Payload 256 B. (Same SQL/contract for all
+  three stacks; only the driver differs.)
+
+### Isolation & fairness (per stack)
+
+1. **Fresh OS reboot before each stack** — identical, quiet starting conditions.
+2. Server **pinned to 2 cores** (`taskset -c 2,3`); the load generator pinned to
+   **cores 4,5** so it never competes with the server; Postgres gets the rest.
+3. **One stack at a time** — never two servers running together.
+4. **pool = 32** DB connections, identical across stacks.
+
+### Cleanup between stacks (so each starts clean)
+
+1. `TRUNCATE` all tables (`RESTART IDENTITY`).
+2. **Wait until no (auto)VACUUM worker is active** (poll `pg_stat_activity`) — so
+   leftover vacuum from the prior run can't perturb the next one.
+3. **Cool down** until the 1-minute load average drops below 2.0.
+
+### Pass criterion
+
+Each run must report **0 errors** for its full 30 minutes; any error halts the
+soak for investigation. (All three passed — 0 errors across ~60M requests total.)
+
+**Reproduce:** `bash scripts/soak_3stacks.sh` (reboot between stacks for parity).
+
+---
+
+## Results — 30-minute sustained soak (`execute`, c=64)
+
+Throughput is **requests completed per second** (closed-loop, c=64); latency is
+end-to-end per-request, measured over the full 30-minute window.
+
+| stack | **req/s** | p50 | p90 | p99 | p999 | max | requests | errors |
+|---|--:|--:|--:|--:|--:|--:|--:|--:|
+| **spring-vt** (VT + JdbcClient) | **11,973** | 4.3 | 9.6 | 12.1 | 38.3 | 527 ms | 21.5 M | **0** |
+| **rust-tokio** | 11,081 | 5.3 | 9.8 | **11.4** | 43.2 | 700 ms | 19.9 M | **0** |
+| **go-pgx** | 10,081 | 5.7 | 9.8 | 12.7 | 45.7 | **3,513 ms** | 18.1 M | **0** |
+
+Per-second throughput sustained over 30 min: **spring-vt ≈ 11,973 req/s, rust-tokio
+≈ 11,081 req/s, go-pgx ≈ 10,081 req/s** — all three within ~18% of each other.
+
+### Why the three are so close — it becomes DB-bound
+
+This is the most important thing to understand about the soak. Over 30 minutes of
+continuous `INSERT`s, the `commands` table grows to **~18–21 million rows plus its
+index**. Once that index no longer fits in the Postgres page cache, **every insert
+pays for index maintenance against a large on-disk structure** — and at that point
+**Postgres, not the gRPC runtime, is the bottleneck.** So the three runtimes
+converge: they're all waiting on the same database.
+
+What still separates them at sustained steady state:
+
+- **rust-tokio — best tail / most consistent** (p99 11.4 ms, max 700 ms).
+- **go-pgx — lowest sustained throughput here**, and it ate a **3.5-second** max
+  stall (rode out a Postgres checkpoint poorly; pgx's pool health-checks /
+  recycling add steady overhead over a long run).
+- **spring-vt — highest sustained throughput** (HikariCP at pool 32, no mid-run
+  connection churn, on virtual threads).
+
+---
+
+## Verdict (2-core target, workflow-engine hot path)
+
+Under a **sustained 30-minute write soak on a 2-core box, the stack choice barely
+moves throughput** — all three land at **10–12k req/s with zero errors**, because
+the workload becomes **Postgres-bound** as the table grows. The runtime is not the
+wall at steady state; the database is.
+
+Within that close race:
+
+- **spring-vt (virtual threads + Spring JdbcClient) — the pragmatic pick.** It
+  **sustained the highest throughput** (11,973 req/s), with simple blocking code,
+  mainstream JVM hiring, and clean ergonomics. For a JVM-centric org this is the
+  low-risk choice — stay on virtual threads + `JdbcClient` (not reactive, not
+  JPA/Exposed).
+- **rust-tokio — pick it for the tail.** Lowest, most predictable latency
+  (p99 11.4 ms, max 700 ms) and no multi-second stalls — best if jitter and
+  worst-case latency matter most, and the team can carry Rust.
+- **go-pgx — solid but the weakest here.** Lowest sustained throughput and a
+  3.5-second stall in this run.
+
+**The bigger lever is the database, not the language.** Because sustained write
+throughput is Postgres-bound on this shape, the highest-impact work is on the DB
+design — partitioning / retention for append tables, or a checkpoint-style state
+model (bounded, HOT-updated rows) that keeps the working set cache-resident. Get
+that right and any of these three runtimes will serve the engine well.
+
+## Caveats (read before trusting any single number)
+
+- **n = 1 per stack** — one 30-minute run each. The spread (≤18%) is partly
+  Postgres/disk, not pure runtime.
+- **Non-dedicated box** — expect run-to-run variance; each soak ran on a fresh
+  reboot to equalize conditions.
+- **DB-bound by design** — these are *sustained* numbers on a single, growing
+  table; they measure steady state, which here is dominated by Postgres.
+- spring-vt runs its tuned config (pool 32, epoll, 1 I/O thread, 2 GB heap,
+  JdbcClient); reproduce via `scripts/soak_3stacks.sh` and `spring-vt/PROFILING.md`.
+
+## Layout
+
 ```
-
-## Configuration
-
-All knobs live in `scripts/config.sh` and are overridable via env vars:
-
-| Var | Default | Meaning |
-|-----|---------|---------|
-| `CONCURRENCY_LEVELS` | `1 8 32 64 128` | in-flight request sweep |
-| `DURATION` | `30s` | measured phase per level |
-| `WARMUP` | `5s` | unmeasured priming phase |
-| `PAYLOAD` | `256` | payload bytes |
-| `PG_POOL_MAX` / `PG_POOL_MIN` | `16` / `4` | pool size (both stacks) |
-| `GOMAXPROCS` | `2` | Go core cap |
-| `VERTX_EVENT_LOOPS` | `2` | Vert.x event-loop threads (= GrpcVerticle instances) |
-| `JVM_OPTS` | `-Xms512m -Xmx1024m -XX:+UseZGC -XX:+AlwaysPreTouch` | Java 25 + 1 GB heap |
-| `PIN_SERVER_CPUS` / `PIN_CLIENT_CPUS` | `0,1` / `0,1` | taskset pinning |
-
-## Fairness decisions (read before trusting numbers)
-
-These are deliberate so the comparison isn't accidentally rigged:
-
-1. **Identical work.** Same proto, same FNV-1a checksum (the Kotlin side
-   reimplements Go's `hash/fnv` exactly, not CRC32), same single `INSERT ...
-   RETURNING id`, same index.
-2. **Equal core budget.** `GOMAXPROCS=2` vs `VERTX_EVENT_LOOPS=2`. JVM heap is
-   capped at 1 GB so GC behaviour is realistic for the 4 GB box.
-3. **Equal pool.** Both use min=4 / max=16 connections.
-4. **Prepared statements on both.** pgx statement cache is on by default;
-   Vert.x uses `setCachePreparedStatements(true)`. Note Vert.x additionally
-   pipelines (`setPipeliningLimit(256)`) — this is a genuine architectural
-   advantage of the reactive driver, not a thumb on the scale, so it's left on.
-5. **One server at a time.** The orchestrator never runs both servers
-   together, so the JVM and Go process don't fight for the 2 cores.
-6. **Client contends with server.** On a 2-core box the load generator shares
-   the cores with the server. That's the honest constraint of your target
-   hardware; if you want client/server isolation, run the loadgen from a second
-   machine and set `-addr` to the server's IP.
-7. **Warmup discarded.** 5s warmup primes pools, statement caches, and (for
-   Kotlin) JIT compilation before measurement.
-
-### Known caveats
-
-- **JIT warmup**: 5s may be short for the JVM to reach steady state. For a
-  publishable result bump `WARMUP=15s` and `DURATION=60s`.
-- **Closed-loop generator** measures latency under a fixed concurrency, not
-  under a fixed arrival rate. It answers "what throughput and tail latency do
-  N in-flight clients get," which is the right question for a worker pool, but
-  it won't surface coordinated-omission effects the way an open-loop tool
-  (e.g. a fixed-RPS driver) would. If you need open-loop, that's a follow-up.
-- **The DB is usually the bottleneck.** With a single tiny INSERT, both stacks
-  may saturate Postgres before they saturate the language runtime. Watch the
-  Postgres CPU during the run — if PG is pinned at ~100% of a core, you're
-  benchmarking Postgres, and the two stacks will look nearly identical. To
-  stress the *runtime/driver* instead, lower DB cost (e.g. `UNLOGGED` table,
-  or batch inserts) — but then you're measuring a different thing. Decide which
-  question matters for Beam and document it.
-
-## Interpreting the output
-
-`summary.csv` columns: `stack, concurrency, rps, p50_ms, p90_ms, p99_ms,
-p999_ms, max_ms, total_ok, total_err`.
-
-What to look for:
-- **Throughput plateau**: where does RPS stop climbing as concurrency rises?
-- **Tail latency under load**: compare p99/p999 at the knee, not just p50.
-- **Error count**: any non-zero `total_err` (outside phase-end deadlines)
-  means the server shed load — investigate before comparing throughput.
-
-A quick chart:
-```bash
-python3 - results/<timestamp>/summary.csv <<'PY'
-import csv,sys
-rows=list(csv.DictReader(open(sys.argv[1])))
-for s in sorted({r['stack'] for r in rows}):
-    print(s); [print(f"  c={r['concurrency']:>4}  rps={float(r['rps']):>9.0f}  p99={r['p99_ms']}ms") for r in rows if r['stack']==s]
-PY
+proto/command.proto     shared gRPC contract
+sql/schema.sql          commands + workflow_state + outbox
+go-pgx/                 Go server
+rust-tokio/             Rust server (modular src/)
+spring-vt/              Spring Boot gRPC + virtual threads + JdbcClient  (+ PROFILING.md)
+loadgen/                shared Go load generator
+scripts/                build_* , soak_3stacks.sh , run_benchmark.sh
+results/                JSON + summary.csv per run
 ```
-
-## Results
-
-Combined sweep: `results/20260525-222611/` (c=1..128) and
-`results/20260526-080945/` (c=256 follow-up), same config for both — 3 stacks,
-`WARMUP=15s DURATION=60s`, server pinned to two P-cores (cpu 2-3) with a 4 GB
-memory cap via `systemd-run --user --scope`, loadgen pinned to cpu 4-5.
-Hardware: M1 Pro / Asahi Linux, Postgres 16 local. Zero application errors
-across all 18 runs.
-
-`c` = concurrency = number of in-flight gRPC requests the loadgen keeps open
-simultaneously (one per worker goroutine). `c=1` measures single-shot
-round-trip cost; `c=128`/`c=256` measure saturation and beyond-saturation
-behavior.
-
-### Peak throughput
-
-| Rank | Stack          | Peak RPS | At c= |
-|-----:|----------------|---------:|------:|
-| 1    | rust-tokio     |  61,812  |  64   |
-| 2    | kotlin-vertx   |  59,940  |  32   |
-| 3    | go-pgx         |  49,324  | 128   |
-
-### Steady-state latency (ms)
-
-| Stack         | p50 @ c=64 | p99 @ c=64 | p99 @ c=128 | p99 @ c=256 |
-|---------------|-----------:|-----------:|------------:|------------:|
-| rust-tokio    |     0.993  |     2.756  |      4.509  |      7.624  |
-| kotlin-vertx  |     0.963  |     2.596  |      4.913  |      9.103  |
-| go-pgx        |     1.150  |     4.138  |      5.583  |      8.959  |
-
-### Single-shot latency (c=1, ms)
-
-| Stack         |  p50  |  p99  |
-|---------------|------:|------:|
-| kotlin-vertx  | 0.129 | 0.235 |
-| go-pgx        | 0.140 | 0.227 |
-| rust-tokio    | 0.151 | 0.278 |
-
-All three are within ~50 µs of each other — round-trip cost is essentially
-equal.
-
-### Tail behavior (`max_ms` across all runs)
-
-- **go-pgx**: cleanest — a single 590 ms outlier; otherwise 16–43 ms.
-- **rust-tokio**: three outliers >250 ms (max 917 ms at c=256), tokio scheduler hiccups.
-- **kotlin-vertx**: four outliers >280 ms (max 860 ms), likely JVM GC pauses.
-
-At c≤128, p999 stays in the 3–9 ms range for all three (worst-of-3-million
-observations, not systemic). **At c=256, rust-tokio's p999 jumps to 310 ms** —
-the first sign of systemic tail degradation: the tokio scheduler appears to
-starve specific in-flight requests when oversubscribed ~125:1 over its
-2 worker threads. Kotlin and Go keep p999 in single-digit ms even at c=256.
-
-### Full table
-
-| stack         |   c | RPS    | p50 ms | p90 ms | p99 ms | p999 ms | max ms  |
-|---------------|----:|-------:|-------:|-------:|-------:|--------:|--------:|
-| go-pgx        |   1 |  6,760 |  0.140 |  0.178 |  0.227 |   0.393 |   4.219 |
-| go-pgx        |   8 | 34,493 |  0.210 |  0.311 |  0.623 |   1.755 |  16.025 |
-| go-pgx        |  32 | 47,655 |  0.567 |  0.992 |  3.044 |   4.658 |  18.382 |
-| go-pgx        |  64 | 45,423 |  1.150 |  1.871 |  4.138 |   6.606 | 590.748 |
-| go-pgx        | 128 | 49,324 |  2.453 |  3.427 |  5.583 |   7.670 |  35.011 |
-| kotlin-vertx  |   1 |  7,258 |  0.129 |  0.177 |  0.235 |   0.412 |   6.291 |
-| kotlin-vertx  |   8 | 38,330 |  0.193 |  0.279 |  0.439 |   1.462 |  26.840 |
-| kotlin-vertx  |  32 | 59,940 |  0.472 |  0.686 |  1.453 |   3.674 | 480.275 |
-| kotlin-vertx  |  64 | 58,143 |  0.963 |  1.261 |  2.596 |   5.457 | 860.412 |
-| kotlin-vertx  | 128 | 59,500 |  1.996 |  2.447 |  4.913 |   9.156 | 280.414 |
-| rust-tokio    |   1 |  6,025 |  0.151 |  0.243 |  0.278 |   0.426 |   7.527 |
-| rust-tokio    |   8 | 42,882 |  0.177 |  0.240 |  0.358 |   0.832 |  15.830 |
-| rust-tokio    |  32 | 59,962 |  0.479 |  0.660 |  1.604 |   4.346 | 577.421 |
-| rust-tokio    |  64 | 61,812 |  0.993 |  1.223 |  2.756 |   5.096 | 252.271 |
-| rust-tokio    | 128 | 60,643 |  2.014 |  2.355 |  4.509 |   7.145 | 498.189 |
-| go-pgx        | 256 | 48,091 |  5.172 |  6.524 |  8.959 |  13.315 |  42.978 |
-| kotlin-vertx  | 256 | 58,069 |  4.066 |  4.735 |  9.103 |  28.319 | 548.930 |
-| rust-tokio    | 256 | 50,538 |  4.205 |  4.780 |  7.624 | 310.569 | 916.658 |
-
-### Verdict
-
-1. **kotlin-vertx** — most stable across the whole concurrency curve: peaks at
-   c=32 (~60k RPS) and holds ~58k through c=256 with p999 staying single-digit
-   ms. Outlier `max_ms` (GC pauses) is the cost.
-2. **rust-tokio** — best peak throughput (61.8k @ c=64) and best p99 at
-   moderate concurrency, but **degrades at c=256**: throughput drops to ~50k
-   and p999 jumps to 310 ms. Tokio's 2-worker-thread scheduler is the
-   bottleneck under heavy oversubscription.
-3. **go-pgx** — lowest throughput ceiling (~49k) and highest steady-state p50,
-   but the most predictable tail by far (`max_ms` < 50 ms at every level
-   except one 590 ms outlier).
-
-For the workflow-engine target (2 cores, occasional bursts up to c=128),
-rust-tokio and kotlin-vertx are functionally tied. **If sustained c=256+
-traffic is realistic, kotlin-vertx is the safer pick**: it holds throughput
-and p999 where rust degrades. If c stays ≤128, the choice comes down to
-ecosystem fit and team expertise.
-
-## Mixed workload — multi-statement TX + reads (kotlin-vertx)
-
-After the autocommit sweep above led to picking Kotlin/Vert.x, this run
-validates the realistic workflow-engine shape: every command is a
-3-statement transaction (INSERT command + UPSERT workflow_state +
-INSERT outbox), and 20% of operations are point reads (SELECT by
-workflow_id). Run: `results/20260526-100158/`, same config as the
-autocommit sweep (15s warmup / 60s measure, server pinned to 2 P-cores,
-4 GB cap). Per-worker keyspace = 10,000 workflow_ids. Zero application
-errors across all 6 runs; clean shutdown every time; zero blocked
-event-loop warnings.
-
-### Mixed-mode results (80% ExecuteTx + 20% GetState)
-
-|  c  | Total RPS | Write RPS | Read RPS | Write p50 | Write p99 | Read p50 | Read p99 | max ms |
-|----:|----------:|----------:|---------:|----------:|----------:|---------:|---------:|-------:|
-|   1 |     4,434 |     3,547 |      888 |     0.242 |     0.465 |    0.087 |    0.160 |   6.09 |
-|   8 |    25,237 |    20,197 |    5,039 |     0.323 |     0.832 |    0.098 |    0.350 |  26.87 |
-|  32 |    32,747 |    26,191 |    6,556 |     1.021 |     2.442 |    0.595 |    1.448 |  29.20 |
-|  64 |    32,404 |    25,911 |    6,493 |     1.994 |     4.312 |    1.560 |    3.376 |  38.33 |
-| 128 |    32,067 |    25,658 |    6,408 |     3.936 |     8.394 |    3.494 |    7.616 |  79.64 |
-| 256 |    31,623 |    25,286 |    6,338 |     7.835 |    16.479 |    7.384 |   15.791 |  59.13 |
-
-### What this validates
-
-1. **Throughput halves vs autocommit (~32k vs ~60k) — expected.** Each
-   ExecuteTx fires `BEGIN + 3 statements + COMMIT` instead of one
-   autocommit INSERT. The driver pipelines them, so it's not 5× slower,
-   but ~2× is honest.
-2. **Throughput plateaus at c=32 and stays flat through c=256.** ~25k
-   write RPS holds within 3% from c=32 onward — the multi-stmt path does
-   not collapse under heavy concurrency. This is the headline win.
-3. **Reads are essentially free at low concurrency** (read p50 0.087 ms
-   at c=1) and stay sub-ms p99 through c=32. Under saturation they
-   climb in line with writes, suggesting both share the same pool
-   bottleneck rather than reads contending separately.
-4. **Tail outliers dropped from 480–860 ms (autocommit) to 26–80 ms.**
-   Lower total throughput means lower GC pressure, and the TX-bounded
-   connection-hold pattern smooths out the burstiness. p999 stays
-   single-digit ms through c=128 and is 25 ms at c=256.
-5. **Atomic transaction integrity holds:** `commands` and `outbox` row
-   counts matched exactly (1,839,947 each) after the c=256 run — every
-   ExecuteTx committed both writes or neither.
-
-### Caveats for this sweep
-
-- `max(version) = 8` in `workflow_state` means the UPSERT mostly took
-  the INSERT branch (large keyspace per worker, short runs). Real
-  workflows have hundreds of commands each. To re-test the UPDATE-heavy
-  shape, rerun with `LOADGEN_KEYSPACE=500`.
-- 80/20 read/write ratio is a guess; the real engine's mix will set the
-  honest steady-state number.
-- This sweep was Kotlin-only since the stack decision was already made
-  from the autocommit comparison above.
-
-### Updated verdict
-
-The autocommit ranking still holds. The mixed-workload numbers
-*confirm* the Kotlin/Vert.x choice for the workflow-engine target:
-~25k sustained write-tx/sec with sub-100ms max latency on a 2-core box
-is a comfortable headroom over the bursts a typical workflow engine
-sees, and the absence of any tail-latency cliff under saturation
-matches the autocommit observation that Kotlin scales further than
-Rust does on this hardware shape.
-
-## Why these libraries
-
-- **pgx** is the de-facto high-performance native Postgres driver for Go and
-  the right baseline for an I/O-bound insert path.
-- **Vert.x reactive pg-client + Kotlin coroutines** is the closest Kotlin
-  analogue: non-blocking driver, event-loop concurrency, with coroutines
-  giving the straight-line `coAwait` code you'd actually write.
-
-Both are the realistic "fast path" choice in their ecosystem, which is what
-makes the comparison decision-relevant for Beam.
